# rgb_project

./: .gitignore  CMakeLists.txt  README.md  main.c
